--- a/hr.form/finish_html_form/index.html
+++ b/hr.form/finish_html_form/index.html
@@ -25,43 +25,43 @@
             </div>
             <div class='panel-body'>
                 <form id="frmCreateMember" class="form-horizontal">
-
-
+                    <div id="sentSuccessfulMsg" class="alert alert-success" style="display:none;">
+                        <strong>Success!</strong> Data successfully sent.
+                    </div>
+                    <div id="formErrorMsg" class="alert alert-danger" style="display:none;">
+                        <strong>Error!</strong> Invalid form data.
+                    </div>
                     <div class="form-group">
-                        <label class="control-label col-xs-3" for="txtLastName">User Name</label>
+                        <label class="control-label col-xs-3" for="txtUserName">User Name</label>
                         <div class="col-xs-9">
                             <input id="txtUserName" type="text" class="form-control" />
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="control-label col-xs-3" for="txtFirstName">First Name</label>
                         <div class="col-xs-9">
                             <input id="txtFirstName" type="text" class="form-control" />
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="control-label col-xs-3" for="txtLastName">Last Name</label>
                         <div class="col-xs-9">
                             <input id="txtLastName" type="text" class="form-control" />
                         </div>
                     </div>
-
                     <div class="form-group">
-                        <label class="control-label col-xs-3" for="txtLastName">Role</label>
+                        <label class="control-label col-xs-3" for="ddlRole">Role</label>
                         <div class="col-xs-9">
                             <select id="ddlRole" class="form-control"></select>
                         </div>
                     </div>
-
                     <div class="form-group">
-                        <label class="control-label col-xs-3" for="txtLastName">State</label>
+                        <label class="control-label col-xs-3" for="txtState">State</label>
                         <div class="col-xs-9">
                             <input id="txtState" type="text" class="form-control" />
+                            <input id="txtStateCode" type="text" class="hidden" />
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="control-label col-xs-3">Is Active</label>
                         <div class="input-group col-xs-9">
@@ -72,7 +72,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <div class="col-xs-offset-3 col-xs-9">
                             <button id="btnSubmit" class="btn btn-default" type="button">Create</button>
